gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


import sys


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'def'", "'('", "')'", "'{'", 
                     "'}'", "'if'", "'else'", "'while'", "'for'", "'plot'", 
                     "','", "'read'", "'write'", "'linearRegression'", "'perceptron'", 
                     "'clustering'", "'print'", "'^'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'matrix'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUMBER", "STRING", "COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_functionDef = 3
    RULE_ifStatement = 4
    RULE_whileStatement = 5
    RULE_forStatement = 6
    RULE_plotStatement = 7
    RULE_fileOperation = 8
    RULE_regression = 9
    RULE_classification = 10
    RULE_clustering = 11
    RULE_printStatement = 12
    RULE_expression = 13
    RULE_functionCall = 14
    RULE_matrixOperation = 15
    RULE_matrixRows = 16
    RULE_matrixRow = 17
    RULE_parameters = 18
    RULE_arguments = 19

    ruleNames =  [ "program", "statement", "assignment", "functionDef", 
                   "ifStatement", "whileStatement", "forStatement", "plotStatement", 
                   "fileOperation", "regression", "classification", "clustering", 
                   "printStatement", "expression", "functionCall", "matrixOperation", 
                   "matrixRows", "matrixRow", "parameters", "arguments" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    ID=29
    NUMBER=30
    STRING=31
    COMMENT=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        from gramaticaVisitor import gramaticaVisitor



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = gramaticaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 537910538) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(gramaticaParser.AssignmentContext,0)


        def functionDef(self):
            return self.getTypedRuleContext(gramaticaParser.FunctionDefContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(gramaticaParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(gramaticaParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(gramaticaParser.ForStatementContext,0)


        def plotStatement(self):
            return self.getTypedRuleContext(gramaticaParser.PlotStatementContext,0)


        def fileOperation(self):
            return self.getTypedRuleContext(gramaticaParser.FileOperationContext,0)


        def regression(self):
            return self.getTypedRuleContext(gramaticaParser.RegressionContext,0)


        def classification(self):
            return self.getTypedRuleContext(gramaticaParser.ClassificationContext,0)


        def clustering(self):
            return self.getTypedRuleContext(gramaticaParser.ClusteringContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(gramaticaParser.PrintStatementContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = gramaticaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.assignment()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.functionDef()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.ifStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.whileStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.forStatement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.plotStatement()
                pass
            elif token in [14, 15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 54
                self.fileOperation()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 8)
                self.state = 55
                self.regression()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 9)
                self.state = 56
                self.classification()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 10)
                self.state = 57
                self.clustering()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 11)
                self.state = 58
                self.printStatement()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 12)
                self.state = 59
                self.match(gramaticaParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = gramaticaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(gramaticaParser.ID)
            self.state = 63
            self.match(gramaticaParser.T__1)
            self.state = 64
            self.expression(0)
            self.state = 65
            self.match(gramaticaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(gramaticaParser.ParametersContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)




    def functionDef(self):

        localctx = gramaticaParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(gramaticaParser.T__2)
            self.state = 68
            self.match(gramaticaParser.ID)
            self.state = 69
            self.match(gramaticaParser.T__3)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 70
                self.parameters()


            self.state = 73
            self.match(gramaticaParser.T__4)
            self.state = 74
            self.match(gramaticaParser.T__5)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 537910538) != 0):
                self.state = 75
                self.statement()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(gramaticaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = gramaticaParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(gramaticaParser.T__7)
            self.state = 84
            self.match(gramaticaParser.T__3)
            self.state = 85
            self.expression(0)
            self.state = 86
            self.match(gramaticaParser.T__4)
            self.state = 87
            self.match(gramaticaParser.T__5)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 537910538) != 0):
                self.state = 88
                self.statement()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(gramaticaParser.T__6)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 95
                self.match(gramaticaParser.T__8)
                self.state = 96
                self.match(gramaticaParser.T__5)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 537910538) != 0):
                    self.state = 97
                    self.statement()
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 103
                self.match(gramaticaParser.T__6)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = gramaticaParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(gramaticaParser.T__9)
            self.state = 107
            self.match(gramaticaParser.T__3)
            self.state = 108
            self.expression(0)
            self.state = 109
            self.match(gramaticaParser.T__4)
            self.state = 110
            self.match(gramaticaParser.T__5)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 537910538) != 0):
                self.state = 111
                self.statement()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(gramaticaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(gramaticaParser.AssignmentContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExpressionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)




    def forStatement(self):

        localctx = gramaticaParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(gramaticaParser.T__10)
            self.state = 120
            self.match(gramaticaParser.T__3)
            self.state = 121
            self.assignment()
            self.state = 122
            self.expression(0)
            self.state = 123
            self.match(gramaticaParser.T__0)
            self.state = 124
            self.expression(0)
            self.state = 125
            self.match(gramaticaParser.T__4)
            self.state = 126
            self.match(gramaticaParser.T__5)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 537910538) != 0):
                self.state = 127
                self.statement()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(gramaticaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlotStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_plotStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlotStatement" ):
                listener.enterPlotStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlotStatement" ):
                listener.exitPlotStatement(self)




    def plotStatement(self):

        localctx = gramaticaParser.PlotStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_plotStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(gramaticaParser.T__11)
            self.state = 136
            self.match(gramaticaParser.T__3)
            self.state = 137
            self.expression(0)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 138
                self.match(gramaticaParser.T__12)
                self.state = 139
                self.expression(0)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self.match(gramaticaParser.T__4)
            self.state = 146
            self.match(gramaticaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FileOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(gramaticaParser.STRING, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_fileOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileOperation" ):
                listener.enterFileOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileOperation" ):
                listener.exitFileOperation(self)




    def fileOperation(self):

        localctx = gramaticaParser.FileOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fileOperation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 149
            self.match(gramaticaParser.T__3)
            self.state = 150
            self.match(gramaticaParser.STRING)
            self.state = 151
            self.match(gramaticaParser.T__4)
            self.state = 152
            self.match(gramaticaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self):
            return self.getTypedRuleContext(gramaticaParser.ParametersContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_regression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegression" ):
                listener.enterRegression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegression" ):
                listener.exitRegression(self)




    def regression(self):

        localctx = gramaticaParser.RegressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_regression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(gramaticaParser.T__15)
            self.state = 155
            self.match(gramaticaParser.T__3)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 156
                self.parameters()


            self.state = 159
            self.match(gramaticaParser.T__4)
            self.state = 160
            self.match(gramaticaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self):
            return self.getTypedRuleContext(gramaticaParser.ParametersContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_classification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassification" ):
                listener.enterClassification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassification" ):
                listener.exitClassification(self)




    def classification(self):

        localctx = gramaticaParser.ClassificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_classification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(gramaticaParser.T__16)
            self.state = 163
            self.match(gramaticaParser.T__3)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 164
                self.parameters()


            self.state = 167
            self.match(gramaticaParser.T__4)
            self.state = 168
            self.match(gramaticaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClusteringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self):
            return self.getTypedRuleContext(gramaticaParser.ParametersContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_clustering

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClustering" ):
                listener.enterClustering(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClustering" ):
                listener.exitClustering(self)




    def clustering(self):

        localctx = gramaticaParser.ClusteringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_clustering)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(gramaticaParser.T__17)
            self.state = 171
            self.match(gramaticaParser.T__3)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 172
                self.parameters()


            self.state = 175
            self.match(gramaticaParser.T__4)
            self.state = 176
            self.match(gramaticaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arguments(self):
            return self.getTypedRuleContext(gramaticaParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = gramaticaParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_printStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(gramaticaParser.T__18)
            self.state = 179
            self.match(gramaticaParser.T__3)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1677721616) != 0):
                self.state = 180
                self.arguments()


            self.state = 183
            self.match(gramaticaParser.T__4)
            self.state = 184
            self.match(gramaticaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultiplicativeContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicative" ):
                listener.enterMultiplicative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicative" ):
                listener.exitMultiplicative(self)


    class AdditiveContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditive" ):
                listener.enterAdditive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditive" ):
                listener.exitAdditive(self)


    class FunctionCallExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionCall(self):
            return self.getTypedRuleContext(gramaticaParser.FunctionCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallExpr" ):
                listener.enterFunctionCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallExpr" ):
                listener.exitFunctionCallExpr(self)


    class SubtractiveContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtractive" ):
                listener.enterSubtractive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtractive" ):
                listener.exitSubtractive(self)


    class IdExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdExpr" ):
                listener.enterIdExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdExpr" ):
                listener.exitIdExpr(self)


    class NumberExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(gramaticaParser.NUMBER, 0)
